# ConvergentMind

./: .env.example  .gitignore  CHANGELOG.md  CODEX_FOR_OSS_APPLICATION.md  CONTRIBUTING.md  DISCUSSION_STARTERS.md  OUTREACH.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
examples/: README.md  sample_goals.md
src/convergentmind/: __init__.py  cli.py  config.py  local_demo.py  memory.py  prompts.py  runner.py  schemas.py
src/convergentmind/browser/: __init__.py  controller.py  extractor.py  observer.py
src/convergentmind/camera/: __init__.py  observer.py  stream.py
src/convergentmind/computer/: __init__.py  base.py  desktop_stub.py
src/convergentmind/llm/: __init__.py  client.py  planner.py  verifier.py
src/convergentmind/logs/: __init__.py  recorder.py
tests/: test_browser_observer.py  test_camera_stream.py  test_config.py  test_planner_parsing.py  test_runner_smoke.py  test_schemas.py
tests/fixtures/: demo_page.html
