[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convergentmind"
version = "0.1.0"
description = "A multimodal agent prototype for converging browser, camera, and planning intelligence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openai>=2.38.0",
  "playwright>=1.54.0",
  "opencv-python>=4.10.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
convergentmind = "convergentmind.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
